# ObserverAI

./: README.md
backend/: pyproject.toml
backend/agent_workspace/prompts/: prompt-id-9189a66e03da4feabf2d14bc5326461d.json
backend/examples/: enhanced_example.py  simple_example.py  swarm_example.py  swarm_test.py
backend/observer/adapters/: __init__.py  base.py  enhanced_agent.py  swarm_adapter.py  swarms.py
backend/observer/analyzers/: basic.py
backend/observer/core/: __init__.py  decision.py  observer.py
backend/observer/schemas/: models.py
client/: index.html
client/src/components/: Navbar.tsx
client/src/views/: Home.tsx
